--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -18,8 +18,7 @@
                     <img class="rounded-circle mt-5 mb-3" style="object-fit: cover;width: 180px;height: 180px;"
                         src="{{ url_for('static', filename='assets/images/default_avator.png') }}">
                     {% endif %}
-                    <h4 class="font-weight-bold">{{ current_user.first_name }} {{ current_user.last_name }}</h4>
-                    <p class="text-black-50">@{{ current_user.username }}</p>
+                    <h4 class="font-weight-bold">@{{ current_user.username }}</h4>
                 </div>
             </div>
             <div class="col-md-7 col-lg-7">
@@ -36,31 +35,18 @@
                         <div class="form-outline">
                             <div class="row">
                                 <div class="col">
-                                    {{ render_field(form.first_name, placeholder="First name",
-                                    value=current_user.first_name) }}
+                                    {{ render_field(form.phone_number, placeholder="Phone Number",
+                                    value=profile.phone_number) }}
                                 </div>
                                 <div class="col">
-                                    {{ render_field(form.last_name, placeholder="Last name",
-                                    value=current_user.last_name) }}
+                                    {{ render_field(form.city, placeholder="City",
+                                    value=profile.city) }}
                                 </div>
                             </div>
                         </div>
                         <div class="form-outline">
                             {{ render_field(form.profile_image) }}
-                        </div>
-                        <div class="form-outline mb-3">
-                            <div class="col mb-3">
-                                <label class="form-label">Email Address</label>
-                                <input type="text" class="form-control" value="{{ current_user.email }}" disabled=""
-                                    readonly>
-                                <p class="text-muted m-0" style="font-size: 14px;">Email address cannot be edited. You
-                                    can only
-                                    reset it by sending a confirmation link to your newly entered email. If you want to
-                                    make a change, please click the button below.</p>
-                            </div>
-                            <a href="{{ url_for('accounts.change_email') }}" class="btn btn-primary" type="button"
-                                role="button">Reset</a>
-                        </div>
+                    
                         <div class="form-outline mb-3">
                             {{ render_field(form.about, id="bio", placeholder="Enter about yourself", style="height: 6rem;") }}
                         </div>
